FIX: no more hor scrolling on mobile

--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -53,6 +53,7 @@ body {
 body {
 	display: grid;
 	grid-template-rows: auto 1fr auto;
+	grid-template-columns: 100%;
 	padding: 1.1em;
 	background-color: var(--white);
 }
